--- a/style/style.scss
+++ b/style/style.scss
@@ -1,15 +1,18 @@
 @use 'shortcuts/locations';
 @use 'shortcuts/displays';
 
+@use 'components/component';
 @use 'components/text';
 @use 'components/button';
-@use 'components/header';
 @use 'components/page';
 
 * {
   margin: 0;
   padding: 0;
-  position: relative;
-
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
 }
