--- a/style/components/_button.scss
+++ b/style/components/_button.scss
@@ -17,14 +17,14 @@
   cursor: pointer;
   user-select: none;
 
-  background-color: #fff;
+  background-color: #bbb;
   color: #000;
 
   &:hover {
-    background-color: #aaa;
+    background-color: #555;
   }
 
   &:focus {
-    box-shadow: #aaa 0px 1px 1px, #aaa 0px 0px 0px 1px;
+    box-shadow: #555 0px 1px 1px, #aaa 0px 0px 0px 1px;
   }
 }
